@@ -91,8 +91,8 @@
 #define PHP_MODE_STRIP       5
 #define PHP_MODE_CLI_DIRECT  6
 
-static char *optarg = NULL;
-static int optind = 1;
+static char *php_optarg = NULL;
+static int php_optind = 1;
 
 static const opt_struct OPTIONS[] = {
 	{'a', 0, "interactive"},
@@ -500,8 +500,8 @@ int main(int argc, char *argv[])
 	zend_file_handle file_handle;
 /* temporary locals */
 	int behavior=PHP_MODE_STANDARD;
-	int orig_optind=optind;
-	char *orig_optarg=optarg;
+	int orig_optind=php_optind;
+	char *orig_optarg=php_optarg;
 	char *arg_free=NULL, **arg_excp=&arg_free;
 	char *script_file=NULL;
 	zend_llist global_vars;
@@ -549,18 +549,18 @@ int main(int argc, char *argv[])
 #endif
 
 
-	while ((c = php_getopt(argc, argv, OPTIONS, &optarg, &optind, 0))!=-1) {
+	while ((c = php_getopt(argc, argv, OPTIONS, &php_optarg, &php_optind, 0))!=-1) {
 		switch (c) {
 		case 'c':
-			cli_sapi_module.php_ini_path_override = strdup(optarg);
+			cli_sapi_module.php_ini_path_override = strdup(php_optarg);
 			break;
 		case 'n':
 			cli_sapi_module.php_ini_ignore = 1;
 			break;
 		}
 	}
-	optind = orig_optind;
-	optarg = orig_optarg;
+	php_optind = orig_optind;
+	php_optarg = orig_optarg;
 
 	cli_sapi_module.executable_location = argv[0];
 
@@ -604,11 +604,11 @@ int main(int argc, char *argv[])
 		INI_HARDCODED("output_buffering", "0");
 		INI_HARDCODED("max_execution_time", "0");
 
-		while ((c = php_getopt(argc, argv, OPTIONS, &optarg, &optind, 0)) != -1) {
+		while ((c = php_getopt(argc, argv, OPTIONS, &php_optarg, &php_optind, 0)) != -1) {
 			switch (c) {
 
 			case 'd': /* define ini entries on command line */
-				define_command_line_ini_entry(optarg);
+				define_command_line_ini_entry(php_optarg);
 				break;
 
 			case 'h': /* help & quit */
@@ -663,9 +663,9 @@ int main(int argc, char *argv[])
         /* Set some CLI defaults */
 		SG(options) |= SAPI_OPTION_NO_CHDIR;
 
-		optind = orig_optind;
-		optarg = orig_optarg;
-		while ((c = php_getopt(argc, argv, OPTIONS, &optarg, &optind, 0)) != -1) {
+		php_optind = orig_optind;
+		php_optarg = orig_optarg;
+		while ((c = php_getopt(argc, argv, OPTIONS, &php_optarg, &php_optind, 0)) != -1) {
 			switch (c) {
 
 			case 'a':	/* interactive mode */
@@ -686,12 +686,12 @@ int main(int argc, char *argv[])
 					param_error = "Either execute direct code or use a file.\n";
 					break;
 				}
-				script_file = optarg;
+				script_file = php_optarg;
 				break;
 
 			case 'g': /* define global variables on command line */
 				{
-					char *arg = estrdup(optarg);
+					char *arg = estrdup(php_optarg);
 
 					zend_llist_add_element(&global_vars, &arg);
 				}
@@ -724,7 +724,7 @@ int main(int argc, char *argv[])
 					break;
 				}
 				behavior=PHP_MODE_CLI_DIRECT;
-				exec_direct=optarg;
+				exec_direct=php_optarg;
 				break;
 
 			case 's': /* generate highlighted HTML from source */
@@ -744,7 +744,7 @@ int main(int argc, char *argv[])
 				break;
 
 			case 'z': /* load extension file */
-				zend_load_extension(optarg);
+				zend_load_extension(php_optarg);
 				break;
 			case 'H':
 				hide_argv = 1;
@@ -764,9 +764,9 @@ int main(int argc, char *argv[])
 		CG(interactive) = interactive;
 
 		/* only set script_file if not set already and not in direct mode and not at end of parameter list */
-		if (argc > optind && !script_file && behavior!=PHP_MODE_CLI_DIRECT && strcmp(argv[optind-1],"--")) {
-			script_file=argv[optind];
-			optind++;
+		if (argc > php_optind && !script_file && behavior!=PHP_MODE_CLI_DIRECT && strcmp(argv[php_optind-1],"--")) {
+			script_file=argv[php_optind];
+			php_optind++;
 		}
 		if (script_file) {
 			if (cli_seek_file_begin(&file_handle, script_file, &lineno TSRMLS_CC) != SUCCESS) {
@@ -785,12 +785,12 @@ int main(int argc, char *argv[])
 
 		/* before registering argv to module exchange the *new* argv[0] */
 		/* we can achieve this without allocating more memory */
-		SG(request_info).argc=argc-optind+1;
-		arg_excp = argv+optind-1;
-		arg_free = argv[optind-1];
+		SG(request_info).argc=argc-php_optind+1;
+		arg_excp = argv+php_optind-1;
+		arg_free = argv[php_optind-1];
 		SG(request_info).path_translated = file_handle.filename;
-		argv[optind-1] = file_handle.filename;
-		SG(request_info).argv=argv+optind-1;
+		argv[php_optind-1] = file_handle.filename;
+		SG(request_info).argv=argv+php_optind-1;
 
 		if (php_request_startup(TSRMLS_C)==FAILURE) {
 			*arg_excp = arg_free;
